<resources>
    <string name="app_name">HomeWork2</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="key_dot">.</string>
    <string name="division">/</string>
    <string name="key_equally">=</string>
    <string name="key_composition">*</string>
    <string name="key_subtraction">-</string>
    <string name="key_addition">+</string>
    <string name="key_clear">C</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Выбор темы</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="_1">Тема1</string>
    <string name="_2">Тема2</string>

</resources>