<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/BtnTheme1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textSize="@dimen/txt_size" />

        <RadioButton
            android:id="@+id/BtnTheme2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:textSize="@dimen/txt_size" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/flowers"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/key_result"
        android:layout_width="@dimen/width_EdTxt"
        android:layout_height="@dimen/height_btn"
        android:background="@color/design_default_color_on_primary"
        app:layout_constraintBottom_toTopOf="@id/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_clear"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingClass" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_1"
        style="@style/ButtonsStyle"
        android:text="@string/key_1"
        app:layout_constraintBottom_toTopOf="@id/key_0"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_2"
        style="@style/ButtonsStyle"
        android:text="@string/key_2"
        app:layout_constraintBottom_toTopOf="@id/key_dot"
        app:layout_constraintEnd_toStartOf="@id/key_3"
        app:layout_constraintStart_toEndOf="@id/key_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_3"
        style="@style/ButtonsStyle"
        android:text="@string/key_3"
        app:layout_constraintBottom_toTopOf="@id/key_division"
        app:layout_constraintEnd_toStartOf="@id/key_composition"
        app:layout_constraintStart_toEndOf="@id/key_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_composition"
        style="@style/ButtonsStyle"
        android:text="@string/key_composition"
        app:layout_constraintBottom_toTopOf="@id/key_equally"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_4"
        style="@style/ButtonsStyle"
        android:text="@string/key_4"
        app:layout_constraintBottom_toTopOf="@id/key_1"
        app:layout_constraintEnd_toStartOf="@id/key_5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_5"
        style="@style/ButtonsStyle"
        android:text="@string/key_5"
        app:layout_constraintBottom_toTopOf="@id/key_2"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintStart_toEndOf="@id/key_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_6"
        style="@style/ButtonsStyle"
        android:text="@string/key_6"
        app:layout_constraintBottom_toTopOf="@id/key_3"
        app:layout_constraintEnd_toStartOf="@id/key_subtraction"
        app:layout_constraintStart_toEndOf="@id/key_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_subtraction"
        style="@style/ButtonsStyle"
        android:text="@string/key_subtraction"
        app:layout_constraintBottom_toTopOf="@id/key_composition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_7"
        style="@style/ButtonsStyle"
        android:text="@string/key_7"
        app:layout_constraintBottom_toTopOf="@id/key_4"
        app:layout_constraintEnd_toStartOf="@id/key_8"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_8"
        style="@style/ButtonsStyle"
        android:text="@string/key_8"
        app:layout_constraintBottom_toTopOf="@id/key_5"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintStart_toEndOf="@id/key_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_9"
        style="@style/ButtonsStyle"
        android:text="@string/key_9"
        app:layout_constraintBottom_toTopOf="@id/key_6"
        app:layout_constraintEnd_toStartOf="@id/key_addition"
        app:layout_constraintStart_toEndOf="@id/key_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_addition"
        style="@style/ButtonsStyle"
        android:text="@string/key_addition"
        app:layout_constraintBottom_toTopOf="@id/key_subtraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_9" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_0"
        style="@style/ButtonsStyle"
        android:text="@string/key_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_dot"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_dot"
        style="@style/ButtonsStyle"
        android:text="@string/key_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_division"
        app:layout_constraintStart_toEndOf="@id/key_0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_division"
        style="@style/ButtonsStyle"
        android:text="@string/division"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_equally"
        app:layout_constraintStart_toEndOf="@id/key_dot" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_equally"
        style="@style/ButtonsStyle"
        android:text="@string/key_equally"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_division" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_clear"
        style="@style/ButtonsStyle"
        android:text="@string/key_clear"
        app:layout_constraintBottom_toTopOf="@id/key_addition"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>